objects/Shared_File__c.object
<CustomObject><fields>
        <fullName>Description__c</fullName>
        <description>Description of the Document</description>
        <inlineHelpText>Description of the Document</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Display_In_Public_Site__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if the file should be displayed in public site searches</description>
        <inlineHelpText>Indicates if the file should be displayed in public site searches</inlineHelpText>
        <label>Display In Public Site</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Download_Link__c</fullName>
        <description>Link to Download the File (Externally available)</description>
        <inlineHelpText>Link to Download the File (Externally available)</inlineHelpText>
        <label>Download Link</label>
        <type>Url</type>
    </fields><fields>
        <fullName>File_Name__c</fullName>
        <description>Name of the file being shared</description>
        <inlineHelpText>Name of the file being shared</inlineHelpText>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>File_Type__c</fullName>
        <description>Type of the File Uploaded</description>
        <inlineHelpText>Type of the File Uploaded</inlineHelpText>
        <label>File Type</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ContentDistributionId__c</fullName>
        <description>Id of the Content Distribution</description>
        <externalId>true</externalId>
        <inlineHelpText>Id of the Content Distribution</inlineHelpText>
        <label>ContentDistributionId</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ContentDocumentId__c</fullName>
        <description>Id of the Content Document</description>
        <externalId>true</externalId>
        <inlineHelpText>Id of the Content Document</inlineHelpText>
        <label>ContentDocumentId</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ContentVersionId__c</fullName>
        <description>Id of the Content Version</description>
        <externalId>true</externalId>
        <inlineHelpText>Id of the Content Vresion</inlineHelpText>
        <label>ContentVersionId</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>RelatedRecordId__c</fullName>
        <description>Record If of the Related SObject</description>
        <externalId>true</externalId>
        <inlineHelpText>Record If of the Related SObject</inlineHelpText>
        <label>RelatedRecordId</label>
        <length>20</length>
        <type>Text</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Contains Information about the Files being shared in Public Sites</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Shared File</label><nameField>
        <displayFormat>SHF-{00000000}</displayFormat>
        <label>Shared File Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Shared Files</pluralLabel><sharingModel>ReadWrite</sharingModel></CustomObject>